--- a/src/partials/90_footer.html
+++ b/src/partials/90_footer.html
@@ -24,7 +24,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-6 col-md-2 col-lg-3 col-xl-3">
+        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>Information</h6>
             <ul>
@@ -35,18 +35,18 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>Orders</h6>
             <ul>
               <li><a href="#">Payment options</a></li>
-              <li><a href="#">Shipping and delivery</a></li>
+              <li><a href="#">Shipping and Delivery</a></li>
               <li><a href="#">Returns</a></li>
               <li><a href="#">Shipping</a></li>
             </ul>
           </div>
-          <img src="./images/cards.png" />
         </div>
+        <div class="payment-card"><img src="./images/cards.png" /></div>
       </div>
     </div>
   </div>
@@ -54,10 +54,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-12 text-center"></div>
-        <div class="col-sm-12 col-md-6 col-lg-12 col-xl-12 copyright text-center">
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 copyright text-center">
           <p>©Copyright 2016 Bazar | All Rights Reserved</p>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-12 col-xl-12 socialmedia text-right">
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 socialmedia text-center">
           <ul>
             <li>
               <a href="#"><i class="fab fa-twitter"></i></a>
