--- a/src/partials/30_section-features.html
+++ b/src/partials/30_section-features.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="feature-box">
+        <div class="feature-box active">
           <a href="#">
             <div class="icon"><i class="fas fa-truck"></i></div>
             <div class="content">
