Add active for right arrow button

--- a/src/sass/components/_section--promoted.scss
+++ b/src/sass/components/_section--promoted.scss
@@ -296,6 +296,10 @@
       left: 0;
       bottom: -2px;
 
+      .active {
+        background-color: $primary !important;
+      }
+
       .arrow {
         font-size: 26px;
         display: inline;
