--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-sm-4 heading">
+        <div class="col-sm-12 col-md-3 heading">
           <h3>New furniture</h3>
         </div>
-        <div class="col-sm-12 col-md menu">
+        <div class="col-sm-12 col-md-7 menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
             <li><a href="#">Chair</a></li>
@@ -14,7 +14,7 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
-        <div class="col-auto dots">
+        <div class="col-sm-12 col-md-2 dots">
           <ul>
             <li><a href="#" class="active"></a></li>
             <li><a href="#"></a></li>
@@ -30,7 +30,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -58,7 +60,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -72,7 +76,9 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 100.00</div>
@@ -80,10 +86,6 @@
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-
           </div>
         </div>
       </div>
@@ -93,7 +95,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -107,7 +111,9 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+              <a href="#" class="btn-outline active"
+                ><i class="fas fa-exchange-alt"></i
+              ></a>
             </div>
             <div class="price">
               <div class="btn-main-small no-hover">$ 100.00</div>
@@ -115,10 +121,6 @@
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-
           </div>
         </div>
       </div>
@@ -128,7 +130,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -144,15 +148,12 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <<<<<<< HEAD <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-          </div>
-          <div class="price">
-            <div class="btn-main-small no-hover old-price">$ 120.00</div>
-            =======
+
             <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-              >>>>>>> Add missing bootstrap grid classes to match RWD requirments
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
           </div>
         </div>
@@ -163,7 +164,9 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
           </div>
           <div class="content">
@@ -179,120 +182,109 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <<<<<<< HEAD <div class="price">
+            <div class="price">
               <div class="btn-main-small no-hover">$ 120.00</div>
-          </div>
-          =======
-          <div class="price">
-            <div class="btn-main-small no-hover">$ 30.00</div>
-          </div>
-          >>>>>>> Add missing bootstrap grid classes to match RWD requirments
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-      <div class="product-box">
-        <div class="photo pic-6">
-          <div class="sale">sale</div>
-          <div class="buttons">
-            <a href="#" class="btn-main-small">Quick View</a>
-            <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
-          </div>
-        </div>
-        <div class="content">
-          <h5>Aenean Ru Bristique</h5>
-          <div class="stars">
-            <a href="#" class="full"></a> <a href="#" class="full"></a>
-            <a href="#"></a> <a href="#"></a> <a href="#"></a>
-          </div>
-        </div>
-        <div class="line"></div>
-        <div class="actions">
-          <div class="outlines">
-            <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-            <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-          </div>
-          <<<<<<< HEAD <div class="price">
-            <div class="btn-main-small no-hover">$ 100.00</div>
-        </div>
-        <div class="price">
-          <div class="btn-main-small no-hover old-price">$ 120.00</div>
-          =======
-          <div class="price">
-            <div class="btn-main-small no-hover">$ 30.00</div>
-            >>>>>>> Add missing bootstrap grid classes to match RWD requirments
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-      <div class="product-box">
-        <div class="photo pic-7">
-          <div class="sale">sale</div>
-          <div class="buttons">
-            <a href="#" class="btn-main-small">Quick View</a>
-            <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+        <div class="product-box">
+          <div class="photo pic-6">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+            </div>
           </div>
         </div>
-        <div class="content">
-          <h5>Aenean Ru Bristique</h5>
-          <div class="stars">
-            <a href="#" class="full"></a> <a href="#" class="full"></a>
-            <a href="#"></a> <a href="#"></a> <a href="#"></a>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+        <div class="product-box">
+          <div class="photo pic-7">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
-        <div class="line"></div>
-        <div class="actions">
-          <div class="outlines">
-            <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-            <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+        <div class="product-box">
+          <div class="photo pic-8">
+            <div class="sale">sale</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
           </div>
-          <<<<<<< HEAD <div class="price">
-            <div class="btn-main-small no-hover">$ 120.00</div>
-        </div>
-        =======
-        <div class="price">
-          <div class="btn-main-small no-hover">$ 30.00</div>
-        </div>
-        >>>>>>> Add missing bootstrap grid classes to match RWD requirments
-      </div>
-    </div>
-  </div>
-  <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-    <div class="product-box">
-      <div class="photo pic-8">
-        <div class="sale">sale</div>
-        <div class="buttons">
-          <a href="#" class="btn-main-small">Quick View</a>
-          <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
-        </div>
-      </div>
-      <div class="content">
-        <h5>Aenean Ru Bristique</h5>
-        <div class="stars">
-          <a href="#" class="full"></a> <a href="#" class="full"></a>
-          <a href="#"></a> <a href="#"></a> <a href="#"></a>
-        </div>
-      </div>
-      <div class="line"></div>
-      <div class="actions">
-        <div class="outlines">
-          <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-          <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-        </div>
-        <<<<<<< HEAD <div class="price">
-          <div class="btn-main-small no-hover">$ 100.00</div>
-      </div>
-      <div class="price">
-        <div class="btn-main-small no-hover old-price">$ 120.00</div>
-        =======
-        <div class="price">
-          <div class="btn-main-small no-hover">$ 30.00</div>
-          >>>>>>> Add missing bootstrap grid classes to match RWD requirments
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
 </div>
