--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -25,14 +25,20 @@
       width: 45px;
       border-bottom: 4px solid $primary;
     }
+
+    @media screen and (max-width: 850px) {
+      text-align: center;
+    }
   }
 
   .menu {
     text-align: center;
+
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -87,5 +93,9 @@
         }
       }
     }
+  }
+
+  @media screen and (max-width: 850px) {
+    text-align: center;
   }
 }
