Improve grid for smallest divices and code structure

--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="row trial">
-      <div class="col-4 col-md-6 col-sm-12">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-4">
         <a href="#">
           <div class="post-box">
             <div class="cover article-1">
@@ -37,7 +37,7 @@
           </div>
         </a>
       </div>
-      <div class="col-4 col-md-6 col-sm-12">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-4">
         <a href="#">
           <div class="post-box">
             <div class="cover article-2">
@@ -60,7 +60,7 @@
           </div>
         </a>
       </div>
-      <div class="col-4 col-md-6 col-sm-12">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-4">
         <a href="#">
           <div class="post-box">
             <div class="cover article-3">
