Change image in gallery from fixed backgroudn into cover

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -15,7 +15,7 @@
     }
 
     overflow: hidden;
-    background-size: 263px 261px;
+    background-size: cover;
     background-position: center;
 
     .sale {
