--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,8 +2,10 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto heading"><h3>New furniture</h3></div>
-        <div class="col menu">
+        <div class="col-sm-12 col-md-3 heading">
+          <h3>New furniture</h3>
+        </div>
+        <div class="col-sm-12 col-md-7 menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
             <li><a href="#">Chair</a></li>
@@ -12,7 +14,7 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
-        <div class="col-auto dots">
+        <div class="col-sm-12 col-md-2 dots">
           <ul>
             <li><a href="#" class="active"></a></li>
             <li><a href="#"></a></li>
@@ -22,7 +24,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-1">
             <div class="sale">sale</div>
@@ -46,14 +48,13 @@
               <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
             <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+              <div class="btn-main-small no-hover">$ 30.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-2">
             <div class="sale">sale</div>
@@ -79,14 +80,16 @@
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-3">
             <div class="sale">sale</div>
@@ -112,14 +115,16 @@
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-4">
             <div class="sale">sale</div>
@@ -143,14 +148,17 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-5">
             <div class="sale">sale</div>
@@ -174,11 +182,13 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 120.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 120.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-6">
             <div class="sale">sale</div>
@@ -202,14 +212,16 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-7">
             <div class="sale">sale</div>
@@ -233,11 +245,14 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 120.00</div></div>
+
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 30.00</div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
         <div class="product-box">
           <div class="photo pic-8">
             <div class="sale">sale</div>
@@ -261,7 +276,9 @@
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 100.00</div></div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 100.00</div>
+            </div>
             <div class="price">
               <div class="btn-main-small no-hover old-price">$ 120.00</div>
             </div>
