Change solution after MaciejKut sugestion

--- a/src/partials/20_section-promoted.html
+++ b/src/partials/20_section-promoted.html
@@ -4,14 +4,7 @@
       <div class="col correctPadding">
         <div class="promoted-box">
           <div class="hot-deals">
-            <div class="hot-deals-header">
-              <p>HOT DEALS</p>
-              <div class="points-box">
-                <div id="first-point" class="point active"></div>
-                <div id="second-point" class="point"></div>
-                <div id="third-point" class="point"></div>
-              </div>
-            </div>
+            <div class="hot-deals-header"><p>HOT DEALS</p></div>
             <div class="hot-deals-carousel">
               <div class="carousel-cell images">
                 <img src="./images/fotel_01.jpg" />
