--- a/src/sass/components/_section--promoted.scss
+++ b/src/sass/components/_section--promoted.scss
@@ -26,30 +26,39 @@
           font-weight: 600;
           padding-left: 24px;
         }
-
-        .points-box {
-          display: flex;
-          padding-right: 14px;
-
-          .active {
-            background-color: $primary !important;
-          }
-
-          .point {
-            width: 13px;
-            height: 13px;
-            background-color: $white;
-            border-radius: 50px;
-            border: none;
-            margin-right: 8px;
-            cursor: pointer;
-          }
-        }
       }
 
       .hot-deals-carousel {
         max-height: 458px;
         height: 100%;
+
+        .flickity-page-dots .dot {
+          display: inline-block;
+          width: 13px;
+          height: 13px;
+          margin: 0;
+          margin-right: 8px;
+          background: #e2e2e2;
+          border-radius: 50%;
+          opacity: 0.25;
+          cursor: pointer;
+        }
+        .flickity-page-dots {
+          position: absolute;
+          width: 100%;
+          height: 20px;
+          padding: 0;
+          margin: 0;
+          list-style: none;
+          text-align: center;
+          line-height: 1;
+          right: -133px;
+          top: -33px;
+        }
+        .flickity-page-dots .dot.is-selected {
+          opacity: 1 !important;
+          background-color: $primary !important;
+        }
 
         .images {
           width: 100%;
