--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -40,7 +40,12 @@ header {
     }
   }
 
-  .company-claim {
+  .company-claim-mobile {
+    display: none;
+  }
+
+  .company-claim,
+  .company-claim-mobile {
     background-color: $header-bg;
 
     img {
@@ -253,9 +258,21 @@ header {
               justify-content: flex-end;
               padding-right: 10px;
             }
+
+            .icon-label {
+              display: none;
+            }
           }
         }
       }
+    }
+
+    .company-claim {
+      display: none;
+    }
+
+    .company-claim-mobile {
+      display: block;
     }
   }
 }
