Add working carousel

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,7 +1,9 @@
 .product-box {
   background-color: #ffffff;
   border: 1px solid #e1e1e1;
-  margin-bottom: 2rem;
+  margin-bottom: 50px;
+  margin-right: 30px;
+  width: 250px;
 
   .photo {
     position: relative;
