--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -14,166 +14,165 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
-        <div class="col-sm-12 col-md-2 dots">
-          <ul>
-            <li><a href="#" class="active"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
-        </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-        <div class="product-box">
-          <div class="photo pic-1">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+      <div class="col-12">
+        <div class="main-carousel">
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-1">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-2">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small">
+                    <i class="fa fa-shopping-basket"></i> ADD TO CART
+                  </a>
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline active"
+                    ><i class="far fa-heart"></i
+                  ></a>
+                  <a href="#" class="btn-outline active"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 30.00</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-        <div class="product-box">
-          <div class="photo pic-2">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"
-                ><i class="fas fa-exchange-alt"></i
-              ></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-3">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover old-price">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-        <div class="product-box">
-          <div class="photo pic-3">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-4">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"
-                ><i class="fas fa-exchange-alt"></i
-              ></a>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-        <div class="product-box">
-          <div class="photo pic-4">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-
-            <div class="price">
-              <div class="btn-main-small no-hover">$ 100.00</div>
-            </div>
-            <div class="price">
-              <div class="btn-main-small no-hover old-price">$ 120.00</div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-        <div class="product-box">
-          <div class="photo pic-5">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+          <div class="carousel-cell">
+            <div class="product-box">
+              <div class="photo pic-5">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="line"></div>
@@ -188,7 +187,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+      <div class="carousel-cell">
         <div class="product-box">
           <div class="photo pic-6">
             <div class="sale">sale</div>
@@ -221,7 +220,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+      <div class="carousel-cell">
         <div class="product-box">
           <div class="photo pic-7">
             <div class="sale">sale</div>
@@ -252,7 +251,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+      <div class="carousel-cell">
         <div class="product-box">
           <div class="photo pic-8">
             <div class="sale">sale</div>
