--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -29,7 +29,7 @@
 
   .menu {
     text-align: center;
-    margin-right: 70px;
+    margin-right: 0;
     ul {
       margin: 0;
       padding: 0;
@@ -59,6 +59,9 @@
           }
         }
       }
+    }
+    @media (min-width: 1200px) {
+      margin-right: 120px;
     }
   }
 
