--- a/src/partials/20_section-promoted.html
+++ b/src/partials/20_section-promoted.html
@@ -162,7 +162,7 @@
             <button class="shop-now">SHOP NOW</button>
             <div class="navi-buttons">
               <button class="arrow-left arrow"><</button>
-              <button class="arrow-right arrow active">></button>
+              <button class="arrow-right arrow">></button>
             </div>
           </div>
         </div>
