Add all recommendation from WDP190403-23

--- a/src/partials/20_section-promoted.html
+++ b/src/partials/20_section-promoted.html
@@ -155,6 +155,17 @@
                 <img src="./images/sypialnia.jpg" alt="sorry..." />
               </div>
             </div>
+            <div class="products-carousel-mobile">
+              <div class="carousel-cell">
+                <img src="./images/sofa.jpg" alt="sorry..." />
+              </div>
+              <div class="carousel-cell">
+                <img src="./images/jadalnia.jpg" alt="sorry..." />
+              </div>
+              <div class="carousel-cell">
+                <img src="./images/sypialnia.jpg" alt="sorry..." />
+              </div>
+            </div>
             <div class="title"></div>
             <h1>INDOOR</h1>
             <h1 class="second">FURNITURE</h1>
