--- a/src/partials/90_footer.html
+++ b/src/partials/90_footer.html
@@ -2,7 +2,7 @@
   <div class="footer-menu">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>Information</h6>
             <ul>
@@ -13,7 +13,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>My account</h6>
             <ul>
@@ -24,7 +24,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>Information</h6>
             <ul>
@@ -35,7 +35,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-12 col-sm-6 col-md-3 col-lg-3 col-xl-3">
           <div class="menu-wrapper">
             <h6>Orders</h6>
             <ul>
