Added images and bootstrap tabs for 5 categories

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -88,6 +88,142 @@
     background-image: url("../images/product08.jpg");
   }
 
+  .pic-9 {
+    background-image: url("../images/chair-1.jpg");
+  }
+
+  .pic-10 {
+    background-image: url("../images/chair-2.jpg");
+  }
+
+  .pic-11 {
+    background-image: url("../images/chair-3.jpg");
+  }
+
+  .pic-12 {
+    background-image: url("../images/chair-4.jpg");
+  }
+
+  .pic-13 {
+    background-image: url("../images/chair-5.jpg");
+  }
+
+  .pic-14 {
+    background-image: url("../images/chair-6.jpg");
+  }
+
+  .pic-15 {
+    background-image: url("../images/chair-7.jpg");
+  }
+
+  .pic-16 {
+    background-image: url("../images/chair-8.jpg");
+  }
+
+  .pic-17 {
+    background-image: url("../images/sofa-9.jpg");
+  }
+
+  .pic-18 {
+    background-image: url("../images/sofa-2.jpg");
+  }
+
+  .pic-19 {
+    background-image: url("../images/sofa-3.jpg");
+  }
+
+  .pic-20 {
+    background-image: url("../images/sofa-4.jpg");
+  }
+
+  .pic-21 {
+    background-image: url("../images/sofa-5.jpg");
+  }
+
+  .pic-22 {
+    background-image: url("../images/sofa-6.jpg");
+  }
+
+  .pic-23 {
+    background-image: url("../images/sofa-7.jpg");
+  }
+
+  .pic-24 {
+    background-image: url("../images/sofa-8.jpg");
+  }
+
+  .pic-25 {
+    background-image: url("../images/table-1.jpg");
+  }
+
+  .pic-26 {
+    background-image: url("../images/table-9.jpg");
+  }
+
+  .pic-27 {
+    background-image: url("../images/table-2.jpg");
+  }
+
+  .pic-28 {
+    background-image: url("../images/table-3.jpg");
+  }
+
+  .pic-29 {
+    background-image: url("../images/table-4.jpg");
+  }
+
+  .pic-30 {
+    background-image: url("../images/table-5.jpg");
+  }
+
+  .pic-31 {
+    background-image: url("../images/table-6.jpg");
+  }
+
+  .pic-32 {
+    background-image: url("../images/table-7.jpg");
+  }
+
+  .pic-33 {
+    background-image: url("../images/table-8.jpg");
+  }
+
+  .pic-34 {
+    background-image: url("../images/set-1.jpg");
+  }
+
+  .pic-35 {
+    background-image: url("../images/set-9.jpg");
+  }
+
+  .pic-36 {
+    background-image: url("../images/set-2.jpg");
+  }
+
+  .pic-37 {
+    background-image: url("../images/set-3.jpg");
+  }
+
+  .pic-38 {
+    background-image: url("../images/set-4.jpg");
+  }
+
+  .pic-39 {
+    background-image: url("../images/set-5.jpg");
+  }
+
+  .pic-40 {
+    background-image: url("../images/set-6.jpg");
+  }
+
+  .pic-41 {
+    background-image: url("../images/set-7.jpg");
+  }
+
+  .pic-42 {
+    background-image: url("../images/set-8.jpg");
+  }
+
   .old-price {
     text-decoration: line-through;
   }
