Correct flickty script file

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -1,7 +1,7 @@
 <div class="section--gallery">
   <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-12 col-lg-6">
         <div class="panel-bar">
           <div class="row no-gutters align-items-end">
             <div class="col-auto heading">
@@ -101,8 +101,7 @@
                       <div class="triangleRight"></div>
                     </div>
                   </div>
-
-                  <img src={{ src }} alt/>
+                   <img src={{ src }} alt/>
               </div>
             </script>
 
@@ -152,7 +151,38 @@
             role="tabpanel"
             aria-labelledby="nav-profile-tab"
           >
-            <p>placeholder</p>
+            <div class="product-box">
+              <div class="photo pic-1">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline active"
+                    ><i class="far fa-heart"></i
+                  ></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
+            </div>
           </div>
           <div
             class="tab-pane fade"
@@ -160,7 +190,37 @@
             role="tabpanel"
             aria-labelledby="nav-contact-tab"
           >
-            <p>placeholder</p>
+            <div class="product-box">
+              <div class="photo pic-7">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 30.00</div>
+                </div>
+              </div>
+            </div>
           </div>
           <div
             class="tab-pane fade"
@@ -168,11 +228,43 @@
             role="tabpanel"
             aria-labelledby="nav-toprated-tab"
           >
-            <p>placeholder</p>
+            <div class="product-box">
+              <div class="photo pic-6">
+                <div class="sale">sale</div>
+                <div class="buttons">
+                  <a href="#" class="btn-main-small">Quick View</a>
+                  <a href="#" class="btn-main-small"
+                    ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                  >
+                </div>
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a href="#" class="full"></a> <a href="#" class="full"></a>
+                  <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline"
+                    ><i class="fas fa-exchange-alt"></i
+                  ></a>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover">$ 100.00</div>
+                </div>
+                <div class="price">
+                  <div class="btn-main-small no-hover old-price">$ 120.00</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-lg-6 d-none d-lg-block">
         <div id="featured-gallery-image">
           <div>
             <p>from<span>$50.80</span></p>
