Remove unnecessary classes and ID for star container; Correct for loop (for setActiveStars); Iluminate stars for one random product

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -35,12 +35,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -66,12 +66,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating2">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -99,12 +99,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           ,
@@ -133,12 +133,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -164,12 +164,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -195,12 +195,10 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star-rated"></a> <a href="#" class="star-rated"></a>
+              <a href="#" class="star-rated"></a> <a href="#" class="star-rated"></a>
+              <a href="#" class="star-rated"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -226,12 +224,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
@@ -257,12 +255,12 @@
           </div>
           <div class="content">
             <h5>Aenean Ru Bristique</h5>
-            <div class="stars" id="product-rating">
-              <a href="#" class="star star-all full" data-star="1"></a>
-              <a href="#" class="star star-all full" data-star="2"></a>
-              <a href="#" class="star star-all" data-star="3"></a>
-              <a href="#" class="star star-all" data-star="4"></a>
-              <a href="#" class="star star-all" data-star="5"></a>
+            <div class="stars">
+              <a href="#" class="star full" data-star="1"></a>
+              <a href="#" class="star full" data-star="2"></a>
+              <a href="#" class="star" data-star="3"></a>
+              <a href="#" class="star" data-star="4"></a>
+              <a href="#" class="star" data-star="5"></a>
             </div>
           </div>
           <div class="line"></div>
