--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -95,15 +95,8 @@
         color: rgb(42, 42, 42);
         @extend .far;
         @extend .fa-star;
-        // &.star {
-        //   &:hover {
-        //     color: #d58e32;
-        //     @extend .far;
-        //     @extend .fa-star;
-        //     @extend .fas;
-        //   }
-        // }
-        &.star-all.is-active {
+        &.star.is-active,
+        &.star-rated {
           color: #d58e32;
           @extend .full;
         }
