--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -2,14 +2,20 @@
   <div class="container brands">
     <div class="row">
       <div class="col-12 brands-container">
-        <button class="brands-arrow"><i class="fas fa-angle-left"></i></button>
-        <div class="images-brands brand-1"></div>
-        <div class="images-brands brand-2"></div>
-        <div class="images-brands brand-3"></div>
-        <div class="images-brands brand-4"></div>
-        <div class="images-brands brand-5"></div>
-        <div class="images-brands brand-6"></div>
-        <button class="brands-arrow"><i class="fas fa-angle-right"></i></button>
+        <div class="brands-carousel">
+          <div class="images-brands brand-1 carousel-cell"></div>
+          <div class="images-brands brand-2 carousel-cell"></div>
+          <div class="images-brands brand-3 carousel-cell"></div>
+          <div class="images-brands brand-4 carousel-cell"></div>
+          <div class="images-brands brand-5 carousel-cell"></div>
+          <div class="images-brands brand-6 carousel-cell"></div>
+          <div class="images-brands brand-1 carousel-cell"></div>
+          <div class="images-brands brand-2 carousel-cell"></div>
+          <div class="images-brands brand-3 carousel-cell"></div>
+          <div class="images-brands brand-4 carousel-cell"></div>
+          <div class="images-brands brand-5 carousel-cell"></div>
+          <div class="images-brands brand-6 carousel-cell"></div>
+        </div>
       </div>
     </div>
   </div>
