--- a/src/partials/85_section-feedback.html
+++ b/src/partials/85_section-feedback.html
@@ -5,7 +5,7 @@
         <div class="col-auto heading"><h3>Client Feedback</h3></div>
         <div class="col"></div>
         <div class="col-auto dots">
-          <div class="dotAll">
+          <div class="dotAll" id="dotAll">
             <button class=" dotF dot active dotF"></button>
             <button class="dotS dot"></button> <button class="dotT dot"></button>
           </div>
