Fix my WDP190403-2 task
Repairing my task because someone ruined it, probably while resolving the conflict

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -84,16 +84,12 @@ header {
         color: #ffffff;
         text-decoration: none;
 
-        .cart-icon {
-          @extend %transition-duration;
-          background-color: $primary;
-          width: 55px;
-          height: 50px;
-          border-radius: 3px;
+        .cart-container {
           display: flex;
           align-items: center;
 
           .cart-icon {
+            @extend %transition-duration;
             background-color: $primary;
             width: 55px;
             height: 50px;
